--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,13 +61,10 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "com.google.accompanist:accompanist-flowlayout:0.24.9-beta"
-    // CameraX
-    def camerax_version = "1.0.1"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha27"
 // Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation("io.coil-kt:coil-compose:1.3.2")
+
 
 
     testImplementation 'junit:junit:4.13.2'
