--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,14 @@ dependencies {
 // Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation("io.coil-kt:coil-compose:1.3.2")
+    implementation 'androidx.browser:browser:1.4.0'
+
+
+    //Open PDF
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
 
 
