--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
 
-    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha04"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+
+
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.24.9-beta"
+// Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation("io.coil-kt:coil-compose:1.3.2")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
